--- a/adminUsersPage.html
+++ b/adminUsersPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Home</title>
+        <title>User</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
         <link rel="icon" type="image/png" href="img/fuel-pump.svg">
@@ -33,24 +33,6 @@
                 </div>
             </div>
         </header>
-
-        <div class="container my-5">
-            <div class="p-5 text-center bg-body-tertiary rounded-3">
-                <img class="mb-4" src="img/fuel-pump.svg" alt="" width="72" height="57">
-                <h1 class="text-body-emphasis"></h1>
-                <p class="col-lg-8 mx-auto fs-5 text-muted"> Welcome to Gas Station</p>
-                <div class="d-inline-flex gap-2 mb-5">
-                    <a href="adminUsersPage.html">
-                        <button href="adminUsersPage.html"
-                                class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill"
-                                type="button">Users</button>
-                    </a>
-
-                </div>
-            </div>
-        </div>
-        <script src="./hederName.js"></script>
-        <script src="./adminHome.js"></script>
+        <script src="hederName.js"></script>
     </body>
-
 </html>
