--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="login.css">
+        <link rel="icon" type="image/png" href="img/fuel-pump.svg">
     </head>
     <body class="d-flex align-items-center py-4 bg-body-tertiary">
         <main class="form-signin w-100 m-auto">
@@ -28,6 +29,7 @@
                 <button class="btn btn-primary w-100 py-2" type="submit" value='submit' name="submit">Sign in</button>
             </form>
         </main>
+
         <script src="login.js"></script>
     </body>
 </html>
