--- a/adminUsersPage.html
+++ b/adminUsersPage.html
@@ -35,100 +35,105 @@
         </header>
 
         <div class="container-fluid">
-            <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 380px;">
-                <div class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
-                    <span class="fs-5 fw-semibold">List group</span>
+            <div class="row">
+                <div class="col-sm-12 col-md-4">
+                    <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 380px;">
+                        <div class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
+                            <span class="fs-5 fw-semibold">List group</span>
+                        </div>
+                        <div id="userlist" class="list-group list-group-flush border-bottom" style="max-height: 79vh; overflow-y: auto;">
+
+                        </div>
+                    </div>
                 </div>
-                <div class="list-group list-group-flush border-bottom" style="max-height: 79vh; overflow-y: auto;">
 
-                <a href="#" class="list-group-item list-group-item-action py-3 lh-sm">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            <strong class="mb-1">List group item heading</strong>
-                            <small>Wed</small>
+                <div class="mt-3 mb-3 col-sm-12 col-md-8">
+                        <div class="btn-group" role="group" aria-label="Basic outlined example">
+                            <button type="button" id="create" class="btn btn-outline-primary">Create</button>
+                            <button type="button" id="update" class="btn btn-outline-primary">Update</button>
+                            <button type="button" id="delete" class="btn btn-outline-primary">Delete</button>
                         </div>
-                        <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            <strong class="mb-1">List group item heading</strong>
-                            <small class="text-body-secondary">Tues</small>
-                        </div>
-                        <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            <strong class="mb-1">List group item heading</strong>
-                            <small class="text-body-secondary">Mon</small>
-                        </div>
-                        <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                    </a>
 
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm" aria-current="true">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            <strong class="mb-1">List group item heading</strong>
-                            <small class="text-body-secondary">Wed</small>
-                        </div>
-                        <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            <strong class="mb-1">List group item heading</strong>
-                            <small class="text-body-secondary">Tues</small>
-                        </div>
-                        <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            <strong class="mb-1">List group item heading</strong>
-                            <small class="text-body-secondary">Mon</small>
-                        </div>
-                        <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm" aria-current="true">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            <strong class="mb-1">List group item heading</strong>
-                            <small class="text-body-secondary">Wed</small>
-                        </div>
-                        <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            <strong class="mb-1">List group item heading</strong>
-                            <small class="text-body-secondary">Tues</small>
-                        </div>
-                        <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            <strong class="mb-1">List group item heading</strong>
-                            <small class="text-body-secondary">Mon</small>
-                        </div>
-                        <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm" aria-current="true">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            <strong class="mb-1">List group item heading</strong>
-                            <small class="text-body-secondary">Wed</small>
-                        </div>
-                        <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            <strong class="mb-1">List group item heading</strong>
-                            <small class="text-body-secondary">Tues</small>
-                        </div>
-                        <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-sm">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            <strong class="mb-1">List group item heading</strong>
-                            <small class="text-body-secondary">Mon</small>
-                        </div>
-                        <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                    </a>
+
+                    <div class="mt-3 container">
+                        <h4 class="mb-3">User</h4>
+<!--                        <form class="needs-validation">-->
+                        <form>
+                            <div class="row g-3">
+                                <div class="col-sm-12">
+                                    <label for="name" class="form-label">First name</label>
+                                    <input type="text" class="form-control" id="name" required="" disabled>
+                                    <div class="invalid-feedback"></div>
+                                </div>
+
+                                <div class="col-12">
+                                    <label for="address" class="form-label">Address</label>
+                                    <input type="text" class="form-control" id="address" placeholder="1234 Main St"
+                                           required="" disabled>
+                                    <div class="invalid-feedback"></div>
+                                </div>
+
+                                <div class="col-12">
+                                    <label for="nif" class="form-label">NIF</label>
+                                    <input type="text" class="form-control" id="nif" required="" disabled>
+                                    <div class="invalid-feedback"></div>
+                                </div>
+
+                                <div class="col-12">
+                                    <label for="email" class="form-label">Email</label>
+                                    <div class="input-group has-validation">
+                                        <span class="input-group-text">@</span>
+                                        <input type="text" class="form-control" id="email" required="" disabled>
+                                        <div class="invalid-feedback"></div>
+                                    </div>
+                                </div>
+
+                                <div class="col-12">
+                                    <label for="login" class="form-label">Login</label>
+                                    <input type="text" class="form-control" id="login" required="" disabled>
+                                    <div class="invalid-feedback"></div>
+                                </div>
+
+                                <div class="col-12">
+                                    <label for="password" class="form-label">Password</label>
+                                    <input type="text" class="form-control" id="password" required="" disabled>
+                                    <div class="invalid-feedback"></div>
+                                </div>
+
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="status" disabled>
+                                    <label class="form-check-label" for="status">Active</label>
+                                </div>
+
+                                <div class="col-md-12">
+                                    <label for="permission" class="form-label">Permission</label>
+                                    <select class="form-select" id="permission" required="" disabled>
+                                        <option value="">Choose...</option>
+                                        <option>California</option>
+                                    </select>
+                                    <div class="invalid-feedback"></div>
+                                </div>
+
+                                <div class="col-md-12">
+                                    <label for="loyalty-program" class="form-label">Loyalty Program</label>
+                                    <select class="form-select" id="loyalty-program" required="" disabled>
+                                        <option value="">Choose...</option>
+                                        <option>California</option>
+                                    </select>
+                                    <div class="invalid-feedback"></div>
+                                </div>
+
+                            </div>
+
+                            <hr class="my-4">
+
+
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
+        <script src="adminUser.js"></script>
         <script src="hederName.js"></script>
     </body>
 </html>
