--- a/adminUsersPage.html
+++ b/adminUsersPage.html
@@ -57,8 +57,8 @@
 
                     <div class="mt-3 container">
                         <h4 class="mb-3">User</h4>
-<!--                        <form class="needs-validation">-->
-                        <form>
+                        <form class="needs-validation">
+<!--                        <form>-->
                             <div class="row g-3">
                                 <div class="col-sm-12">
                                     <label for="name" class="form-label">First name</label>
@@ -109,7 +109,6 @@
                                     <label for="permission" class="form-label">Permission</label>
                                     <select class="form-select" id="permission" required="" disabled>
                                         <option value="">Choose...</option>
-                                        <option>California</option>
                                     </select>
                                     <div class="invalid-feedback"></div>
                                 </div>
@@ -118,7 +117,6 @@
                                     <label for="loyalty-program" class="form-label">Loyalty Program</label>
                                     <select class="form-select" id="loyalty-program" required="" disabled>
                                         <option value="">Choose...</option>
-                                        <option>California</option>
                                     </select>
                                     <div class="invalid-feedback"></div>
                                 </div>
