send form to php

--- a/adminUsersPage.html
+++ b/adminUsersPage.html
@@ -62,20 +62,20 @@
                             <div class="row g-3">
                                 <div class="col-sm-12">
                                     <label for="name" class="form-label">First name</label>
-                                    <input type="text" class="form-control" id="name" required="" disabled>
+                                    <input type="text" class="form-control" id="name" name="name" required="" disabled>
                                     <div class="invalid-feedback"></div>
                                 </div>
 
                                 <div class="col-12">
                                     <label for="address" class="form-label">Address</label>
-                                    <input type="text" class="form-control" id="address" placeholder="1234 Main St"
+                                    <input type="text" class="form-control" id="address" name="address" placeholder="1234 Main St"
                                            required="" disabled>
                                     <div class="invalid-feedback"></div>
                                 </div>
 
                                 <div class="col-12">
                                     <label for="nif" class="form-label">NIF</label>
-                                    <input type="text" class="form-control" id="nif" required="" disabled>
+                                    <input type="text" class="form-control" id="nif" name="nif" required="" disabled>
                                     <div class="invalid-feedback"></div>
                                 </div>
 
@@ -83,31 +83,31 @@
                                     <label for="email" class="form-label">Email</label>
                                     <div class="input-group has-validation">
                                         <span class="input-group-text">@</span>
-                                        <input type="text" class="form-control" id="email" required="" disabled>
+                                        <input type="text" class="form-control" id="email" name="email" required="" disabled>
                                         <div class="invalid-feedback"></div>
                                     </div>
                                 </div>
 
                                 <div class="col-12">
                                     <label for="login" class="form-label">Login</label>
-                                    <input type="text" class="form-control" id="login" required="" disabled>
+                                    <input type="text" class="form-control" id="login" name="login" required="" disabled>
                                     <div class="invalid-feedback"></div>
                                 </div>
 
                                 <div class="col-12">
                                     <label for="password" class="form-label">Password</label>
-                                    <input type="text" class="form-control" id="password" required="" disabled>
+                                    <input type="text" class="form-control" id="password" name="password" required="" disabled>
                                     <div class="invalid-feedback"></div>
                                 </div>
 
                                 <div class="form-check">
-                                    <input type="checkbox" class="form-check-input" id="status" disabled>
+                                    <input type="checkbox" class="form-check-input" id="status" name="status" disabled>
                                     <label class="form-check-label" for="status">Active</label>
                                 </div>
 
                                 <div class="col-md-12">
                                     <label for="permission" class="form-label">Permission</label>
-                                    <select class="form-select" id="permission" required="" disabled>
+                                    <select class="form-select" id="permission" name="permission" required="" disabled>
                                         <option value="">Choose...</option>
                                     </select>
                                     <div class="invalid-feedback"></div>
@@ -115,7 +115,7 @@
 
                                 <div class="col-md-12">
                                     <label for="loyalty-program" class="form-label">Loyalty Program</label>
-                                    <select class="form-select" id="loyalty-program" required="" disabled>
+                                    <select class="form-select" id="loyalty-program" name="loyalty-program" required="" disabled>
                                         <option value="">Choose...</option>
                                     </select>
                                     <div class="invalid-feedback"></div>
