--- a/adminUsersPage.html
+++ b/adminUsersPage.html
@@ -33,13 +33,16 @@
                 </div>
             </div>
         </header>
+        <div class="alert alert-danger alert-dismissible fade show"  id='errorMsg' role="alert" style = "display: none">
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
 
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 col-md-4">
                     <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 380px;">
                         <div class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
-                            <span class="fs-5 fw-semibold">List group</span>
+                            <span class="fs-5 fw-semibold">Users List</span>
                         </div>
                         <div id="userlist" class="list-group list-group-flush border-bottom" style="max-height: 79vh; overflow-y: auto;">
 
