--- a/service.html
+++ b/service.html
@@ -83,6 +83,7 @@
                             <label class="form-check-label" for="status">Active</label>
                         </div>
                         <hr class="my-4">
+                    </div>
                 </form>
 
             </div>
