updated Loyalty Program

--- a/loyalityProgramPage.html
+++ b/loyalityProgramPage.html
@@ -69,15 +69,19 @@
         <form class="needs-validation">
 
           <div class="row g-3">
-              <div class="col-sm-12">
-                <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" name="name" required="">
-                <div class="invalid-feedback"></div>
-              </div>
+            <div class="col-sm-12">
+              <label for="name" class="form-label">Name</label>
+              <input type="text" class="form-control" id="name" name="name" required="" disabled>
+            </div>
+
+            <div class="col-sm-12">
+              <label for="description" class="form-label">Description</label>
+              <input type="text" class="form-control" id="description" name="description" required disabled>
+              <div class="invalid-feedback"></div>
+            </div>
             <hr class="my-4">
           </div>
         </form>
-
       </div>
     </div>
   </div>
