--- a/employeeAdminHome.html
+++ b/employeeAdminHome.html
@@ -26,7 +26,7 @@
                     <a href="scheduleService.html" class="nav-link link-light px-2">Schedule Service</a>
                 </li>
             </ul>
-            <div id="eaName" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">
+            <div id="userName" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">
             </div>
             <div class="dropdown text-end">
                 <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" style="filter: invert(1)" data-bs-toggle="dropdown" aria-expanded="false">
