--- a/loyalityProgramPage.html
+++ b/loyalityProgramPage.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="heder.css">
 </head>
 <body>
-<header class="bg-primary p-3 mb-3 border-bottom">
+<header class="bg-primary p-3 mb-3 border-bottom" >
   <div class="container-fluid">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -26,7 +26,7 @@
           <a href="scheduleService.html" class="nav-link link-light px-2">Schedule Service</a>
         </li>
       </ul>
-      <div id="eaName" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">
+      <div id="userName" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">
       </div>
       <div class="dropdown text-end">
         <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" style="filter: invert(1)" data-bs-toggle="dropdown" aria-expanded="false">
