--- a/loyalityProgramPage.html
+++ b/loyalityProgramPage.html
@@ -67,11 +67,11 @@
       <div class="mt-3 container">
         <h4 class="mb-3">Loyalty program</h4>
         <form class="needs-validation">
-
           <div class="row g-3">
             <div class="col-sm-12">
               <label for="name" class="form-label">Name</label>
-              <input type="text" class="form-control" id="name" name="name" required="" disabled>
+              <input type="text" class="form-control" id="name" name="name" required disabled>
+              <div class="invalid-feedback"></div> <!-- ADD THIS LINE -->
             </div>
 
             <div class="col-sm-12">
@@ -79,8 +79,9 @@
               <input type="text" class="form-control" id="description" name="description" required disabled>
               <div class="invalid-feedback"></div>
             </div>
-            <hr class="my-4">
           </div>
+
+            <hr class="my-4">
         </form>
       </div>
     </div>
