Files for Service page

--- a/loyalityProgramPage.html
+++ b/loyalityProgramPage.html
@@ -71,7 +71,7 @@
             <div class="col-sm-12">
               <label for="name" class="form-label">Name</label>
               <input type="text" class="form-control" id="name" name="name" required disabled>
-              <div class="invalid-feedback"></div> <!-- ADD THIS LINE -->
+              <div class="invalid-feedback"></div>
             </div>
 
             <div class="col-sm-12">
