--- a/employeeServicesHomePage.html
+++ b/employeeServicesHomePage.html
@@ -14,10 +14,10 @@
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                         <li class="nav-item">
-                            <a href="adminHomePage.html" class="nav-link link-light fw-bold px-2">Home</a>
+                            <a href="employeeServicesHomePage.html" class="nav-link link-light fw-bold px-2">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="adminUsersPage.html" class="nav-link link-light px-2">Users</a>
+                            <a href="employeeServiceCodeEditor.html" class="nav-link link-light px-2">Code Editor</a>
                         </li>
                     </ul>
                     <div id="userName" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">
@@ -40,10 +40,10 @@
                 <h1 class="text-body-emphasis"></h1>
                 <p class="col-lg-8 mx-auto fs-5 text-muted"> Welcome to Gas Station</p>
                 <div class="d-inline-flex gap-2 mb-5">
-                    <a href="adminUsersPage.html">
+                    <a href="employeeServiceCodeEditor.html">
                         <button href="adminUsersPage.html"
                                 class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill"
-                                type="button">Users</button>
+                                type="button">Code Editor</button>
                     </a>
 
                 </div>
