--- a/employeeServiceCodeEditor.html
+++ b/employeeServiceCodeEditor.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Home</title>
+        <title>Code Editor</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
         <link rel="icon" type="image/png" href="img/fuel-pump.svg">
@@ -14,10 +14,10 @@
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                         <li class="nav-item">
-                            <a href="adminHomePage.html" class="nav-link link-light fw-bold px-2">Home</a>
+                            <a href="employeeServicesHomePage.html" class="nav-link link-light fw-bold px-2">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="adminUsersPage.html" class="nav-link link-light px-2">Users</a>
+                            <a href="employeeServiceCodeEditor.html" class="nav-link link-light px-2">Users</a>
                         </li>
                     </ul>
                     <div id="userName" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">
@@ -33,24 +33,5 @@
                 </div>
             </div>
         </header>
-
-        <div class="container my-5">
-            <div class="p-5 text-center bg-body-tertiary rounded-3">
-                <img class="mb-4" src="img/fuel-pump.svg" alt="" width="72" height="57">
-                <h1 class="text-body-emphasis"></h1>
-                <p class="col-lg-8 mx-auto fs-5 text-muted"> Welcome to Gas Station</p>
-                <div class="d-inline-flex gap-2 mb-5">
-                    <a href="adminUsersPage.html">
-                        <button href="adminUsersPage.html"
-                                class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill"
-                                type="button">Users</button>
-                    </a>
-
-                </div>
-            </div>
-        </div>
-        <script src="./hederName.js"></script>
-        <script src="./adminHome.js"></script>
     </body>
-
 </html>
