--- a/service.html
+++ b/service.html
@@ -24,7 +24,7 @@
                     <img src="img/person-circle.svg" alt="user" width="32" height="32" class="rounded-circle">
                 </a>
                 <ul class="dropdown-menu text-small">
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
+                    <li><a class="dropdown-item" href="login.html">Sign out</a></li>
                 </ul>
             </div>
         </div>
