--- a/employeeAdminHome.html
+++ b/employeeAdminHome.html
@@ -33,7 +33,7 @@
                     <img src="img/person-circle.svg" alt="mdo" width="32" height="32" class="rounded-circle">
                 </a>
                 <ul class="dropdown-menu text-small" style="">
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
+                    <li><a class="dropdown-item" href="login.html">Sign out</a></li>
                 </ul>
             </div>
         </div>
