--- a/operatorSalePage.html
+++ b/operatorSalePage.html
@@ -42,9 +42,9 @@
         <div class="col-sm-12 col-md-4">
             <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 380px;">
                 <div class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
-                    <span class="fs-5 fw-semibold">Users List</span>
+                    <span class="fs-5 fw-semibold">Sales List</span>
                 </div>
-                <div id="userlist" class="list-group list-group-flush border-bottom" style="max-height: 79vh; overflow-y: auto;">
+                <div id="saleList" class="list-group list-group-flush border-bottom" style="max-height: 79vh; overflow-y: auto;">
 
                 </div>
             </div>
@@ -59,9 +59,8 @@
 
 
             <div class="mt-3 container">
-                <h4 class="mb-3">User</h4>
+                <h4 class="mb-3">Sale</h4>
                 <form class="needs-validation">
-                    <!--                        <form>-->
 
                     <div class="row g-3">
                         <div class="col-sm-12">
@@ -85,17 +84,73 @@
                         </div>
 
                         <div class="col-12">
-                            <label for="total-price" class="form-label">Total Price</label>
-                            <input type="text" class="form-control" id="total-price" name="total-price" required="" disabled>
+                            <label for="total-amount" class="form-label">Total Amount</label>
+                            <input type="text" class="form-control" id="total-amount" name="total-amount" required="" disabled>
                             <div class="invalid-feedback"></div>
                         </div>
-
-
-
-
                     </div>
 
                     <hr class="my-4">
+
+
+                    <h4 class="mb-3">Item</h4>
+
+                    <div id="itemList" class="row g-3">
+
+
+
+
+
+
+                        <div id="addCard" class="card m-3" style="display : none; width: 18rem; height: 294.400px">
+                            <div class="d-flex justify-content-center align-items-center card-body h-100">
+                                <img class="mb-4" src="img/plus-circle.svg" alt="" width="100" height="100">
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+
+
+
+                    <hr class="my-4">
+
+
+                    <h4 class="mb-3">Movement Card</h4>
+
+
+                    <div class="col-12">
+                        <label for="card-id" class="form-label">Card №</label>
+                        <input type="text" class="form-control" id="card-id" name="card-id" disabled>
+                        <div class="invalid-feedback"></div>
+                    </div>
+
+                    <div class="col-12">
+                        <label for="loyalty-program" class="form-label">Loyalty Program</label>
+                        <input type="text" class="form-control" id="loyalty-program" name="loyalty-program" disabled>
+                        <div class="invalid-feedback"></div>
+                    </div>
+
+                    <div class="col-12">
+                        <label for="point-qty" class="form-label">Point Qty</label>
+                        <input type="text" class="form-control" id="point-qty" name="point-qty" disabled>
+                        <div class="invalid-feedback"></div>
+                    </div>
+
+                    <div class="col-md-12">
+                        <label for="prize" class="form-label">Prize</label>
+                        <select class="form-select" id="prize" name="prize" disabled>
+                            <option value="">Choose...</option>
+                        </select>
+                        <div class="invalid-feedback"></div>
+                    </div>
+
+                    <hr class="my-4">
+
+
+
 
 
                 </form>
