--- a/operatorSalePage.html
+++ b/operatorSalePage.html
@@ -85,8 +85,11 @@
 
                         <div class="col-12">
                             <label for="total-amount" class="form-label">Total Amount</label>
-                            <input type="text" class="form-control" id="total-amount" name="total-amount" required="" disabled>
-                            <div class="invalid-feedback"></div>
+                            <div class="input-group">
+                                <input type="text" class="form-control" id="total-amount" name="total-amount" required="" disabled>
+                                <span class="input-group-text rounded-end">€</span>
+                                <div class="invalid-feedback"></div>
+                            </div>
                         </div>
                     </div>
 
