--- a/adminUsersPage.html
+++ b/adminUsersPage.html
@@ -33,10 +33,10 @@
                 </div>
             </div>
         </header>
-        <div class="alert alert-danger alert-dismissible fade show"  id='errorMsg' role="alert" style = "display: none">
+        <div class="alert alert-danger alert-dismissible fade show" id="errorMsg" role="alert" style="display: none">
+            <p class="m-0" id="errorMsgText">Something went wrong</p>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
-
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 col-md-4">
