--- a/scheduleService.html
+++ b/scheduleService.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>User</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="icon" type="image/png" href="img/fuel-pump.svg">
   <link rel="stylesheet" href="header.css">
 </head>
@@ -13,115 +13,86 @@
   <div class="container-fluid">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li class="nav-item">
-          <a href="employeeAdminHome.html" class="nav-link link-light fw-bold px-2">Home</a>
-        </li>
-        <li class="nav-item">
-          <a href="loyalityProgramPage.html" class="nav-link link-light px-2">Loyalty Program</a>
-        </li>
-        <li class="nav-item">
-          <a href="service.html" class="nav-link link-light px-2">Service</a>
-        </li>
-        <li class="nav-item">
-          <a href="" class="nav-link link-light px-2">Schedule Service</a>
-        </li>
+        <li class="nav-item"><a href="employeeAdminHome.html" class="nav-link link-light fw-bold px-2">Home</a></li>
+        <li class="nav-item"><a href="loyalityProgramPage.html" class="nav-link link-light px-2">Loyalty Program</a></li>
+        <li class="nav-item"><a href="service.html" class="nav-link link-light px-2">Service</a></li>
+        <li class="nav-item"><a href="#" class="nav-link link-light px-2">Schedule Service</a></li>
       </ul>
-      <div id="userName" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">
-      </div>
+      <div id="userName" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white"></div>
       <div class="dropdown text-end">
-        <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" style="filter: invert(1)" data-bs-toggle="dropdown" aria-expanded="false">
-          <img src="img/person-circle.svg" alt="mdo" width="32" height="32" class="rounded-circle">
+        <a href="#" class="d-block text-decoration-none dropdown-toggle" style="filter: invert(1)" data-bs-toggle="dropdown">
+          <img src="img/person-circle.svg" alt="user" width="32" height="32" class="rounded-circle">
         </a>
-        <ul class="dropdown-menu text-small" style="">
+        <ul class="dropdown-menu text-small">
           <li><a class="dropdown-item" href="login.html">Sign out</a></li>
         </ul>
       </div>
     </div>
   </div>
 </header>
-<div class="alert alert-danger alert-dismissible fade show"  id='errorMsg' role="alert" style = "display: none">
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+
+<div class="alert alert-danger alert-dismissible fade show" id='errorMsg' role="alert" style="display: none">
+  <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
 </div>
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-12 col-md-4">
-      <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 380px;">
-        <div class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
-          <span class="fs-5 fw-semibold">Customer Date service</span>
+    <div class="col-md-4">
+      <div class="d-flex flex-column bg-body-tertiary" style="width: 100%;">
+        <div class="d-flex align-items-center p-3 border-bottom">
+          <span class="fs-5 fw-semibold">Customer Date Service</span>
         </div>
-        <div id="LPlist" class="list-group list-group-flush border-bottom" style="max-height: 79vh; overflow-y: auto;">
-
-        </div>
+        <div id="SSlist" class="list-group list-group-flush border-bottom" style="max-height: 79vh; overflow-y: auto;"></div>
       </div>
     </div>
 
-    <div class="mt-3 mb-3 col-sm-12 col-md-8">
-      <div class="btn-group" role="group" aria-label="Basic outlined example">
+    <div class="mt-3 mb-3 col-md-8">
+      <div class="btn-group" role="group">
         <button type="button" id="create" class="btn btn-outline-primary" disabled>Create</button>
         <button type="button" id="update" class="btn btn-outline-primary">Update</button>
         <button type="button" id="delete" class="btn btn-outline-primary" disabled>Delete</button>
       </div>
 
-
       <div class="mt-3 container">
         <h4 class="mb-3">Schedule Service</h4>
-
         <form class="needs-validation">
           <div class="row g-3">
             <div class="col-sm-12">
               <label for="dt" class="form-label">Date</label>
-              <input type="date" class="form-control" id="dt" name="date" required disabled>
-              <div class="invalid-feedback"></div>
+              <input type="date" class="form-control" id="dt" disabled>
             </div>
-
             <div class="col-sm-12">
               <label for="serv" class="form-label">Service</label>
-              <input type="text" class="form-control" id="serv" name="service" required disabled>
-              <div class="invalid-feedback"></div>
+              <input type="text" class="form-control" id="serv" disabled>
             </div>
-
             <div class="col-sm-12">
               <label for="dst" class="form-label">Description</label>
-              <input type="text" class="form-control" id="dst" name="description" required disabled>
-              <div class="invalid-feedback"></div>
+              <input type="text" class="form-control" id="dst" disabled>
             </div>
-
             <div class="col-sm-12">
               <label for="cst" class="form-label">Customer</label>
-              <input type="text" class="form-control" id="cst" name="customer" required disabled>
-              <div class="invalid-feedback"></div>
+              <input type="text" class="form-control" id="cst" disabled>
             </div>
-
             <div class="col-sm-12">
               <label for="status" class="form-label">Status</label>
-              <input type="text" class="form-control" id="status" name="status" required disabled>
-              <div class="invalid-feedback"></div>
+              <input type="text" class="form-control" id="status" disabled>
             </div>
-
             <div class="col-sm-12">
               <label for="es" class="form-label">Employee Service</label>
-              <input type="text" class="form-control" id="es" name="status" required disabled >
-              <div class="invalid-feedback"></div>
-            </div>
-
-
+              <input type="text" class="form-control" id="es" name="emp_ser" required disabled>
+              <div class="invalid-feedback"></div></div>
             <div class="col-sm-12">
               <label for="mt" class="form-label">Material</label>
               <input type="text" class="form-control" id="mt" name="material" required disabled>
-              <div class="invalid-feedback"></div>
-            </div>
-
-            <hr class="my-4">
+              <div class="invalid-feedback"></div></div>
           </div>
         </form>
-
-
       </div>
     </div>
   </div>
 </div>
-<script src="ScheduleService.js"></script>
+
+<script src="scheduleService.js"></script>
 <script src="headerName.js"></script>
 </body>
 </html>
