--- a/service.html
+++ b/service.html
@@ -70,6 +70,22 @@
                         <input type="checkbox" class="form-check-input" id="status" name="status" disabled>
                         <label class="form-check-label" for="status">Active</label>
                     </div>
+                    <div class="mb-3">
+                        <label for="duration" class="form-label">Duration</label>
+                        <input type="text" class="form-control" id="duration" name="duration" required disabled>
+                        <div class="invalid-feedback"></div>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="priority" class="form-label">Priority</label>
+                        <select class="form-control" id="priority" name="priority" required disabled>
+                            <option value="">Select Priority</option>
+                            <option value="Low">Low</option>
+                            <option value="Medium">Medium</option>
+                            <option value="High">High</option>
+                        </select>
+                        <div class="invalid-feedback"></div>
+                    </div>
                 </form>
             </div>
         </div>
