--- a/service.html
+++ b/service.html
@@ -76,16 +76,16 @@
                         <div class="invalid-feedback"></div>
                     </div>
 
-                    <div class="mb-3">
-                        <label for="priority" class="form-label">Priority</label>
-                        <select class="form-control" id="priority" name="priority" required disabled>
-                            <option value="">Select Priority</option>
-                            <option value="Low">Low</option>
-                            <option value="Medium">Medium</option>
-                            <option value="High">High</option>
-                        </select>
+                    <div class="form-check mb-3">
+                    <select class="form-select" id="priority" name="priority" required disabled>
+                        <option value="">Select Priority</option>
+                        <option value="Low">Low</option>
+                        <option value="Medium">Medium</option>
+                        <option value="High">High</option>
+                    </select>
                         <div class="invalid-feedback"></div>
                     </div>
+
                 </form>
             </div>
         </div>
