--- a/service.html
+++ b/service.html
@@ -76,7 +76,8 @@
                         <div class="invalid-feedback"></div>
                     </div>
 
-                    <div class="form-check mb-3">
+                    <div class="mb-3">
+                        <label>Priority</label>
                     <select class="form-select" id="priority" name="priority" required disabled>
                         <option value="">Select Priority</option>
                         <option value="Low">Low</option>
