Update Product page

--- a/operatorProductPage.html
+++ b/operatorProductPage.html
@@ -30,10 +30,10 @@
             </div>
             <div class="dropdown text-end">
                 <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" style="filter: invert(1)" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="profilepic.jpg" alt="user" width="32" height="32" class="rounded-circle">
+                    <img src="img/person-circle.svg" alt="mdo" width="32" height="32" class="rounded-circle">
                 </a>
                 <ul class="dropdown-menu text-small" style="">
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
+                    <li><a class="dropdown-item" href="login.html">Sign out</a></li>
                 </ul>
             </div>
         </div>
@@ -120,7 +120,7 @@
                     <hr class="my-4">
                 </form>
             </div>
-        </div>
+        </div>aa
     </div>
 </div>
 <script src="product.js"></script>
