--- a/operatorProductPage.html
+++ b/operatorProductPage.html
@@ -78,15 +78,14 @@
                             <label for="price" class="form-label">Price</label>
                             <div class="input-group has-validation">
                                 <span class="input-group-text">€</span>
-                                <input type="number" class="form-control" id="price" name="price" step="0.01" required disabled>
+                                <input type="number" class="form-control" id="price" name="price" min="0" step="0.01" required disabled>
                                 <div class="invalid-feedback"></div>
                             </div>
                         </div>
 
-
                         <div class="col-12">
                             <label for="stock" class="form-label">Stock</label>
-                            <input type="number" class="form-control" id="stock" name="stock" required="" disabled>
+                            <input type="number" class="form-control" min="0" id="stock" name="stock" required="" disabled>
                             <div class="invalid-feedback"></div>
                         </div>
 
