--- a/operatorProductPage.html
+++ b/operatorProductPage.html
@@ -119,7 +119,7 @@
                     <hr class="my-4">
                 </form>
             </div>
-        </div>aa
+        </div>
     </div>
 </div>
 <script src="product.js"></script>
