Product page updated

--- a/operatorProductPage.html
+++ b/operatorProductPage.html
@@ -97,7 +97,7 @@
 
                         <div class="col-md-12">
                             <label for="type" class="form-label">Type</label>
-                            <select class="form-select" id="type" name="type" required="" disabled>
+                            <select id="type" class="form-select" name="type">
                                 <option value="">Choose...</option>
                                 <option value="Fuel">Fuel</option>
                                 <option value="Product">Product</option>
