Loyalty card page updated

--- a/operatorLoyaltyCardPage.html
+++ b/operatorLoyaltyCardPage.html
@@ -84,7 +84,7 @@
         </div>
     </div>
 </div>
-<script src="product.js"></script>
+<script src="operatorLoyaltyCard.js"></script>
 <script src="headerName.js"></script>
 </body>
 </html>
