--- a/operatorLoyaltyCardPage.html
+++ b/operatorLoyaltyCardPage.html
@@ -43,7 +43,7 @@
     <div class="col-sm-12 col-md-4">
         <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 380px;">
             <div class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
-                <span class="fs-5 fw-semibold">ID Customer</span>
+                <span class="fs-5 fw-semibold">Points Customer</span>
             </div>
             <div id="loyaltyCardlist" class="list-group list-group-flush border-bottom" style="max-height: 79vh; overflow-y: auto;"></div>
         </div>
