--- a/scheduleService.html
+++ b/scheduleService.html
@@ -110,8 +110,8 @@
               <label for="status">Status</label>
               <select class="form-select" id="status" name="status" disabled>
                 <option selected>Select Status</option>
-                <option value="yes">Scheduled</option>
-                <option value="no">Unscheduled</option>
+                <option value="Scheduled">Scheduled</option>
+                <option value="Unscheduled">Unscheduled</option>
               </select>
               <div class="invalid-feedback"></div>
             </div>
