--- a/customerHome.html
+++ b/customerHome.html
@@ -20,7 +20,7 @@
                     <a href="movementCard.html" class="nav-link link-light px-2">Movement Card</a>
                 </li>
                 <li class="nav-item">
-                    <a href="customerScheduleService.html" class="nav-link link-light px-2">Schedule Service</a>
+                    <a href="CustomerSS.html" class="nav-link link-light px-2">Schedule Service</a>
                 </li>
             </ul>
             <div id="userName" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">
