--- a/movementCard.html
+++ b/movementCard.html
@@ -16,7 +16,7 @@
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                         <li class="nav-item"><a href="customerHome.html" class="nav-link link-light fw-bold px-2">Home</a></li>
                         <li class="nav-item"><a href="#" class="nav-link link-light px-2">Movement Card</a></li>
-                        <li class="nav-item"><a href="customerScheduleService.html" class="nav-link link-light px-2">Schedule Service </a></li>
+                        <li class="nav-item"><a href="CustomerSS.html" class="nav-link link-light px-2">Schedule Service </a></li>
 
                     </ul>
                     <div id="userName" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white"></div>
