update 2 home pages

--- a/operatorHomePage.html
+++ b/operatorHomePage.html
@@ -30,10 +30,10 @@
             </div>
             <div class="dropdown text-end">
                 <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" style="filter: invert(1)" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="profilepic.jpg" alt="user" width="32" height="32" class="rounded-circle">
+                    <img src="img/person-circle.svg" alt="mdo" width="32" height="32" class="rounded-circle">
                 </a>
                 <ul class="dropdown-menu text-small" style="">
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
+                    <li><a class="dropdown-item" href="login.html">Sign out</a></li>
                 </ul>
             </div>
         </div>
@@ -42,7 +42,7 @@
 
 <div class="container my-5">
     <div class="p-5 text-center bg-body-tertiary rounded-3">
-        <img class="mb-4" src="fuel-pump-icon_255569-1325.avif" alt="pumppic" width="72" height="57">
+        <img class="mb-4" src="img/fuel-pump.svg" alt="" width="72" height="57">
         <h1 class="text-body-emphasis"></h1>
         <p class="col-lg-8 mx-auto fs-5 text-muted"> Welcome to Gas Station</p>
 
