--- a/stationManagementHomePage.html
+++ b/stationManagementHomePage.html
@@ -36,7 +36,7 @@
 
 <div class="container my-5">
     <div class="p-5 text-center bg-body-tertiary rounded-3">
-        <img class="mb-4" src="fuel-pump-icon_255569-1325.avif" alt="pumppic" width="72" height="57">
+        <img class="mb-4" src="img/fuel-pump.svg" alt="" width="72" height="57">
         <h1 class="text-body-emphasis"></h1>
         <p class="col-lg-8 mx-auto fs-5 text-muted"> Welcome to Gas Station</p>
 
