update product page

--- a/operatorProductPage.html
+++ b/operatorProductPage.html
@@ -69,8 +69,8 @@
                 <form class="needs-validation">
                     <div class="row g-3">
                         <div class="col-sm-12">
-                            <label for="productname" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="productname" name="name" required="" disabled>
+                            <label for="productName" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="productName" name="productName" required="" disabled>
                             <div class="invalid-feedback"></div>
                         </div>
 
@@ -97,7 +97,7 @@
 
                         <div class="col-md-12">
                             <label for="type" class="form-label">Type</label>
-                            <select id="type" class="form-select" name="type">
+                            <select id="type" class="form-select" name="type" required="" disabled>>
                                 <option value="">Choose...</option>
                                 <option value="Fuel">Fuel</option>
                                 <option value="Product">Product</option>
