--- a/customerHome.html
+++ b/customerHome.html
@@ -42,14 +42,16 @@
         <img class="mb-4" src="img/fuel-pump.svg" alt="" width="72" height="57">
         <h1 class="text-body-emphasis"></h1>
         <p class="col-lg-8 mx-auto fs-5 text-muted"> Welcome to Gas Station</p>
-        <div class="d-inline-flex gap-2 mb-5">
-            <a href="movementCard.html">
-                <button href="movementCard.html"
-                        class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill"
-                        type="button">Movement Card</button>
+        <div class="d-inline-flex gap-5 mb-5">
+            <a href="movementCard.html" class="btn btn-primary btn-lg px-4 rounded-pill d-inline-flex align-items-center">
+                Movement Card
             </a>
 
+            <a href="CustomerSS.html" class="btn btn-primary btn-lg px-4 rounded-pill d-inline-flex align-items-center">
+                Schedule Service
+            </a>
         </div>
+
     </div>
 </div>
 <script src="headerName.js"></script>
