--- a/employeeAdminHome.html
+++ b/employeeAdminHome.html
@@ -45,14 +45,20 @@
         <img class="mb-4" src="img/fuel-pump.svg" alt="" width="72" height="57">
         <h1 class="text-body-emphasis"></h1>
         <p class="col-lg-8 mx-auto fs-5 text-muted"> Welcome to Gas Station</p>
-        <div class="d-inline-flex gap-2 mb-5">
-            <a href="loyalityProgramPage.html">
-                <button href="loyalityProgramPage.html"
-                        class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill"
-                        type="button">Loyalty program</button>
+        <div class="d-inline-flex gap-5 mb-5">
+            <a href="loyalityProgramPage.html" class="btn btn-primary btn-lg px-4 rounded-pill d-inline-flex align-items-center">
+                Loyalty Program
             </a>
 
+            <a href="service.html" class="btn btn-primary btn-lg px-4 rounded-pill d-inline-flex align-items-center">
+                Service
+            </a>
+
+            <a href="scheduleService.html" class="btn btn-primary btn-lg px-4 rounded-pill d-inline-flex align-items-center">
+                Schedule Service
+            </a>
         </div>
+
     </div>
 </div>
 <script src="headerName.js"></script>
