--- a/CustomerSS.html
+++ b/CustomerSS.html
@@ -89,7 +89,8 @@
                             <select class="form-select" id="status" name="status" required>
                                 <option value="" disabled selected>Select Status</option>
                                 <option value="Scheduled">Scheduled</option>
-                                <option value="Unscheduled">Unscheduled</option>
+                                <option value="processing">Processing</option>
+                                <option value="completed">Completed</option>
                             </select>
                             <div class="invalid-feedback">Please select a status.</div>
                         </div>
