--- a/scheduleService.html
+++ b/scheduleService.html
@@ -111,7 +111,8 @@
               <select class="form-select" id="status" name="status" disabled>
                 <option selected>Select Status</option>
                 <option value="Scheduled">Scheduled</option>
-                <option value="Unscheduled">Unscheduled</option>
+                <option value="processing">Processing</option>
+                <option value="completed">Completed</option>
               </select>
               <div class="invalid-feedback"></div>
             </div>
