--- a/CustomerSS.html
+++ b/CustomerSS.html
@@ -88,7 +88,7 @@
                             <label for="status">Status</label>
                             <select class="form-select" id="status" name="status" required>
                                 <option value="" disabled selected>Select Status</option>
-                                <option value="Scheduled">Scheduled</option>
+                                <option value="scheduled">Scheduled</option>
                                 <option value="processing">Processing</option>
                                 <option value="completed">Completed</option>
                             </select>
