--- a/employeeServiceCodeEditor.html
+++ b/employeeServiceCodeEditor.html
@@ -37,7 +37,7 @@
         <div class="container-fluid">
             <p class="display-6">Code Editor</p>
             <div class="form-floating mb-3">
-                <textarea class="form-control" placeholder="Leave a your code here" id="code" style="height: 300px"></textarea>
+                <textarea class="form-control" placeholder="Leave a your code here" id="code" style="height: 300px; font-family: 'Courier New';"></textarea>
                 <label for="code">Enter your code</label>
             </div>
             <div class="d-grid gap-2 d-md-block mb-3">
