--- a/scheduleService.html
+++ b/scheduleService.html
@@ -110,7 +110,7 @@
               <label for="status">Status</label>
               <select class="form-select" id="status" name="status" disabled>
                 <option selected>Select Status</option>
-                <option value="Scheduled">Scheduled</option>
+                <option value="scheduled">Scheduled</option>
                 <option value="processing">Processing</option>
                 <option value="completed">Completed</option>
               </select>
